makeDeskTopSnapShot thru PLaywright